--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,26 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "expo": "^51.0.0",
-    "expo-constants": "~16.0.1",
-    "expo-font": "^12.0.5",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.9",
-    "expo-splash-screen": "~0.27.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-hook-form": "^7.53.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-reanimated": "^3.15.2",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "^11.0.6"
+    "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
