--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.5",
     "rimraf": "^6.0.1",
